<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_menu_group_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movie_black"
            android:title="@string/nav_movies" />
        <item
            android:id="@+id/nav_tvshows"
            android:icon="@drawable/ic_live_tv_black"
            android:title="@string/nav_tvshows" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people_black"
            android:title="@string/nav_people" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_discover_black"
            android:title="@string/nav_discover" />

    </group>

    <group
        android:id="@+id/nav_menu_group_app"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/nav_about" />
    </group>

</menu>
